Add closing questions frame to cardinality presentation

--- a/Cardinality.tex
+++ b/Cardinality.tex
@@ -104,4 +104,10 @@
   Can we count these sequences?
 \end{frame}
 
+\begin{frame}{}
+  \begin{center}
+    \Huge Questions?
+  \end{center}
+\end{frame}
+
 \end{document}
